--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -1,5 +1,5 @@
 header {
-    height: 20vh;
+    min-height: 20vh;
     background-color: blue;
     display: flex;
     flex-direction: column;
