--- a/src/components/Home/style.css
+++ b/src/components/Home/style.css
@@ -1,9 +1,13 @@
 .Home {
-    flex-direction: column;
-    justify-content: space-around;
     align-items: center;
 }
 
 .EnterButton {
+    padding: 10px;
     width: 40vw;
+    background-color: turquoise;
+    color: navy;
+    font-weight: bolder;
+    border: 5px solid navy;
+    align-self: center;
 }
